# codex-profile-manager

./: .gitignore  README.md  clean.sh  codex-profile-manager.sh  install.sh  pyproject.toml
docs/: README.md  accounts.md  architecture.md  getting-started.md  projects.md  replication-and-operations.md
docs/specs/: continuity-multi-profile-spec.md
lib/: cmd-accounts.sh  cmd-help.sh  cmd-projects.sh  codex-wrapper.sh  completions.sh  config.sh  utils.sh
scripts/: smoke-test.sh
src/codex_profile_manager/: cli.py  core.py  render.py  runner.py
