[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-profile-manager"
version = "0.1.0"
description = "Multi-account profile manager for OpenAI Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1",
  "rich>=13,<14",
]

[project.scripts]
codexpm = "codex_profile_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
