[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-profile-manager"
version = "0.1.0"
description = "Multi-account profile manager for OpenAI Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "MNametissa"}]
keywords = ["openai", "codex", "cli", "profiles", "multi-account"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12,<1",
  "rich>=13,<14",
]

[project.scripts]
codexpm = "codex_profile_manager.cli:main"

[project.urls]
Homepage = "https://github.com/MNametissa/codex-profile-manager"
Repository = "https://github.com/MNametissa/codex-profile-manager"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
